aks-poland-central/platform/stunner-common/stunner-common.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: stunner-gatewayclass
spec:
  controllerName: "stunner.l7mp.io/gateway-operator"
  parametersRef:
    group: "stunner.l7mp.io"
    kind: GatewayConfig
    name: stunner-gatewayconfig
    namespace: stunner
  description: "STUNner is a WebRTC ingress gateway for Kubernetes"
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: udp-gateway
  namespace: stunner
spec:
  gatewayClassName: stunner-gatewayclass
  listeners:
    - name: default-listener
      port: 3478
      protocol: TURN-UDP
    - name: tcp-listener
      port: 3478
      protocol: TURN-TCP
    - name: tls-listener
      port: 5349
      protocol: TURN-TLS
      tls:
        certificateRefs:
        - kind: Secret
          name: stunner-tls
          namespace: stunner
    - name: dtls-listener
      port: 5349
      protocol: TURN-DTLS
      tls:
        certificateRefs:
        - kind: Secret
          name: stunner-tls
          namespace: stunner
---
# ingress for auth service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stunner-auth
  namespace: stunner
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - api.stunner.cc
    secretName: stunner-tls
  rules:
  - host: api.stunner.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stunner-auth
            port:
              number: 8088
